# BP2021

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  agent.py  agent2.py  agent_monitoring_exp.txt  competitor.py  config.json  config_linear.json  config_rl.json  config_sim_market.json  customer.py  data_simulated.csv  dockerfile  environment.yml  environment_config.json  environment_config_agent_monitoring.json  environment_config_exampleprinter.json  environment_config_training.json  exampleprinter.py  experience_buffer.py  first_prototype.py  human_player.py  model_remover.py  policyevaluator.py  preview_svg.html  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  sim_market.py  sqlite.db  term_definitions.md  test.cpp  test_reload_dictionary.py  (+3 more)
.github/workflows/: .pre-commit.yml  CI-no-miniconda.yml  CI.yml  CI_linux.yml  CI_matrix.yml  CI_unix.yml  Pre-commit.yml  Pre-commmit and Tests.yml  Update Conda VM Environment.yml  environment.yml  issue_management.yml
alpha_business/configuration/: environment_config.py  hyperparameter_config.py  path_manager.py  utils.py
alpha_business/market/: customer.py  owner.py  sim_market.py
alpha_business/rl/: q_learning_training.py  training.py
alpha_business_app/: apps.py  views.py
david_thesis/: find_optimal_policy_rebuy_monopoly.py  policy_iteration_monopoly.py
david_thesis/episode_viewer/: package-lock.json  package.json
david_thesis/price_forecast/: Edgeworth_forecast.py  price_data.csv  train_lstm.py
docker/: app.py  container_db_manager.py  container_health_checker.py  container_notification_websocket.py  docker_info.py  docker_manager.py  fake_docker_manager.py  log_api.ini  log_websocket.ini  messenger.py  notification_manager.py  test_container_db.py  test_docker_manager.py  utils.py  websocket.py
docker/dockerfiles/: dockerfile_exampleprinter  dockerfile_monitoring  dockerfile_training
docker_api/: app.py  container_db_manager.py  container_health_checker.py  docker_manager.py  local_measure.py  local_system.py  messenger.py  more_local.py  silent_starter.py  test_config.json  test_docker_manager.py  utils.py
recommerce/: main.py  pyproject.toml  setup.cfg  setup.py
recommerce/agents/: vendors.py
recommerce/configuration/: common_rules.py  config_validation.py  environment_config.py  hyperparameter_config.py  json_configurable.py  path_manager.py  utils.py
recommerce/default_data/configuration_files/: environment_config_agent_monitoring.json  environment_config_exampleprinter.json  environment_config_training.json  hyperparameter_config.json  market_config.json  market_config_mixed.json  market_config_mixed_reward_function.json  market_config_only_partial_view.json  market_config_opposite_state_invisible.json  q_learning_config.json  rl_config.json  sb_a2c_config.json  sb_ddpg_config.json  sb_ppo_config.json  sb_sac_config.json
recommerce/market/: customer.py  owner.py  samples_generation.py  sim_market.py  sim_market_kalibrated.py  sim_market_kalibrated_standard.py  sim_market_kalibrator.py  vendors.py
recommerce/market/circular/: circular_customers.py  circular_sim_market.py  circular_vendors.py
recommerce/market/linear/: linear_customers.py  linear_sim_market.py  linear_vendors.py
recommerce/market_ML/: berkeley_notebook.ipynb  datagenerator_kalibrated_market.py  datagenerator_sim_market.py  first_prototype_johann.py  kalibrated_training.py  linear_regression_debug.py  linear_regression_debug_4th.py  predictable_agent.py  predictable_market.py  pytorch_train.py  rainer_prototype.py  real_prototye_methods_better  real_prototype_methods.py  reformat_last_part.py  training_comparer.py
recommerce/monitoring/: consecutive_model_analyzer.py  exampleprinter.py  load_models_script.py  performance.py  policyanalyzer.py  svg_manipulation.py  training_progress_visualizer.py  watcher.py
recommerce/monitoring/agent_monitoring/: am_configuration.py  am_evaluation.py  am_monitoring.py
recommerce/recommerce/: main.py
recommerce/recommerce/default_data/configuration_files/: environment_config_exampleprinter.json
recommerce/recommerce/market/: sim_market.py
recommerce/recommerce/market/linear/: linear_sim_market.py
recommerce/recommerce/monitoring/agent_monitoring/: am_evaluation.py
recommerce/recommerce/rl/actorcritic/: actorcritic_training.py
recommerce/recommerce/rl/q_learning/: q_learning_agent.py
recommerce/rl/: ablation_study.py  callback.py  multi_training_scenario.py  reinforcement_learning_agent.py  rl_vs_rl_training.py  self_play.py  stable_baselines_model.py  stable_baselines_training.py  training.py  training_scenario.py
recommerce/rl/actorcritic/: actorcritic_agent.py  actorcritic_training.py
recommerce/rl/q_learning/: experience_buffer.py  q_learning_agent.py  q_learning_training.py
recommerce/rl/stable_baselines/: sb_a2c.py  sb_ddpg.py  sb_ppo.py  sb_sac.py  sb_td3.py  stable_baselines_callback.py  stable_baselines_model.py
scripts/: environment.yml
src/: __init__.py  actorcritic.py  agent.py  agent2.py  agent_monitoring.py  competitor.py  customer.py  exampleprinter.py  exampleprinter_circular.py  experience_buffer.py  human_player.py  human_player_circular_economy.py  johann.py  model.py  model_remover.py  owner.py  performance.py  policy_analyser.py  setup.py  sim_market.py  training.py  training2.py  training_scenario.py  utils.py  utils_rl.py  vendors.py
src/agents/: __init__.py  vendors.py
src/alpha_business/: main.py
tests/: conftest.py  test_actorcritic_agent.py  test_actorcritic_training.py  test_config_validation.py  test_customers.py  test_environment_config.py  test_exampleprinter.py  test_hyperparameter_config_rl.py  test_hyperparameter_config_sim_market.py  test_main.py  test_policyanalyzer.py  test_q_learning_training.py  test_reload_dictionary.py  test_rl_vs_rl.py  test_self_play.py  test_sim_market.py  test_stable_baselines_training.py  test_svg_manipulation.py  test_training_scenario.py  test_utils.py  test_vendors.py  utils_tests.py
webserver/: manage.py  package.json  urls.py
(+261 files in other folders)
