[metadata]
name = alpha_business
description = Bachelor Project of 2021/2022 at the HPI EPIC research group
author = Nick Bessin, Leonard Dreeßen, Jan Groeneveld, Judith Herrmann, Nikkel Mollenhauer, Johann Schulze Tast
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = no
install_requires =
	docker>=5.0.3
	gym>=0.21.0
	numpy>=1.21.2
	torch>=1.10.2
	pandas>=1.3.4
	matplotlib>=3.5.0
	tensorboard>=2.7.0
python_requires = >=3.8
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.2.4
    coverage>=5.5
	coverage-badge>=1.1.0
	pre-commit>=2.15.0
	pytest-randomly>=3.11.0
    flake8>=3.9.2

[flake8]
# W191: Indentation contains tabs
# E128: Continuation line under-indented for visual indent
extend-ignore = W191, E128
max-line-length = 140

# F401: module imported but unused
per-file-ignores =
	src/monitoring/performance.py:F401

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
norecursedirs = webserver/*
