[metadata]
name = recommerce
version = 0.1.2
description = Bachelor Project of 2021/2022 at the HPI EPIC research group
# of course won't work as long as we are private
url = https://github.com/hpi-epic/BP2021
author = Nick Bessin, Leonard Dreeßen, Jan Groeneveld, Judith Herrmann, Nikkel Mollenhauer, Johann Schulze Tast
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8

[options]
zip_safe = no
install_requires =
	docker>=5.0.3
	gym>=0.21.0
	numpy>=1.21.2
	torch>=1.10.2
	pandas>=1.3.4
	matplotlib>=3.5.0
	tensorboard>=2.7.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    recommerce = recommerce.main:main

[flake8]
# W191: Indentation contains tabs
# E128: Continuation line under-indented for visual indent
extend-ignore = W191, E128
max-line-length = 140
# F401: module imported but unused
per-file-ignores =
	recommerce/monitoring/performance.py:F401

[coverage:run]
omit = 
	# ignore __init__.py files
	*/__init__.py
	# ignore test files
	tests/*
	docker/test_docker_manager.py
	webserver/alpha_business_app/tests/*
	# ignore files only used as helpers
	setup.py
	test.py
	recommerce/main.py
	recommerce/rl/training_scenario.py
	recommerce/monitoring/performance.py
	# ignore the webserver, it is tested elsewhere
	webserver/*

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
# ignore the webserver, it is tested elsewhere
norecursedirs = webserver/*
