[metadata]
name = recommerce
version = 2022.04.27
description = Bachelor Project of 2021/2022 at the HPI EPIC research group
long_description = file: README.md
long_description_content_type = text/markdown
# of course won't work as long as we are private
url = https://github.com/hpi-epic/BP2021
author = Nick Bessin, Leonard Dreeßen, Jan Groeneveld, Judith Herrmann, Nikkel Mollenhauer, Johann Schulze Tast
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8

[options]
zip_safe = no
install_requires =
	docker>=5.0.3
	gym==0.21.0
	numpy>=1.21.2
	pandas>=1.3.4
	matplotlib>=3.5.0
	tensorboard>=2.7.0
	tqdm>=4.63.0
  	pytest>=6.2.4
  	pytest-randomly>=3.11.0
	pytest-xdist>=2.5.0
	stable-baselines3[extra]>=1.5.0
	names>=0.3.0
	scipy>=1.8.0
python_requires = >=3.8

[options.extras_require]
cpu = 
	torch>=1.11.0
	torchvision>=0.12.0
	torchaudio>=0.11.0
gpu =
	torch==1.11.0+cu115
	torchvision==0.12.0+cu115
	torchaudio==0.11.0+cu115

[options.entry_points]
console_scripts =
    recommerce = recommerce.main:main

[flake8]
# W191: Indentation contains tabs
# E128: Continuation line under-indented for visual indent
extend-ignore = W191, E128, F403, F405
max-line-length = 140

# we don't write migration files ourselves
exclude = webserver/alpha_business_app/migrations/*

# F401: module imported but unused
per-file-ignores =
	recommerce/monitoring/performance.py:F401
	webserver/alpha_business_app/tests/test_prefill.py:E501

[coverage:run]
omit = 
	# ignore __init__.py files
	*/__init__.py
	# ignore test files
	tests/*
	docker/test_docker_manager.py
	webserver/alpha_business_app/tests/*
	# ignore files only used as helpers
	setup.py
	test.py
	recommerce/rl/training_scenario.py
	recommerce/monitoring/performance.py
	# ignore the webserver, it is tested elsewhere
	webserver/*
