[metadata]
name = recommerce
version = 0.1.2
description = Bachelor Project of 2021/2022 at the HPI EPIC research group
# of course won't work as long as we are private
url = https://github.com/hpi-epic/BP2021
author = Nick Bessin, Leonard Dreeßen, Jan Groeneveld, Judith Herrmann, Nikkel Mollenhauer, Johann Schulze Tast
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8

[options]
zip_safe = no
install_requires =
	docker>=5.0.3
	gym>=0.21.0
	numpy>=1.21.2
	torch>=1.10.2
	pandas>=1.3.4
	matplotlib>=3.5.0
	tensorboard>=2.7.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    recommerce = recommerce.main:main
